--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1412,17 +1412,17 @@ a{
 
 
 
-.button-2 {
+/* .button-2 {
   color: #131313;
   border-radius: 40px;
-  /* background-image: -webkit-linear-gradient(30deg, #ffffff 50%, transparent 50%); */
+  background-image: -webkit-linear-gradient(30deg, #ffffff 50%, transparent 50%);
   background-image: linear-gradient(30deg, #ffffff 50%, transparent 50%);
   background-size: 500px;
   background-repeat: no-repeat;
   background-position: 0%;
   -webkit-transition: background 300ms linear;
   transition: background 300ms linear;
-}
+} */
 .button-2:hover {
   background-position: 100%;
   color: #ffffff;
